--- a/README
+++ b/README
@@ -1,3 +1,4 @@
+Michelle 
 Instructions to push your code to code.google.com
 =================================================
 1. Sign into GitHub and create a new repository
